--- a/include/backmatter/Lastpage.tex
+++ b/include/backmatter/Lastpage.tex
@@ -20,9 +20,9 @@
 \addtolength{\voffset}{2cm}
 \renewcommand{\familydefault}{\sfdefault} \normalfont % Set cover page font
 \pagestyle{empty}
-\vspace*{-4.3cm}
+\vspace*{-4.8cm}
 \noindent
-\textcolor{white}{\footnotesize \textbf{DEPARTMENT OF SOME SUBJECT OR TECHNOLOGY}\\
+\textcolor{white}{\footnotesize \textbf{DEPARTMENT OF ELECTRICAL ENGINEERING}\\
 \textbf{CHALMERS UNIVERSITY OF TECHNOLOGY} \\
 Gothenburg, Sweden \\
 \href{www.chalmers.se}{\textcolor{white}{www.chalmers.se}}}
