--- a/include/frontmatter/Titlepage.tex
+++ b/include/frontmatter/Titlepage.tex
@@ -60,13 +60,13 @@ Undefined Thesis type in settings.tex
 \textbf{{\Huge 	A Chalmers University of Technology 	\\[0.2cm] 
 				Master's thesis template for \LaTeX}} 	\\[0.5cm]
 {\Large A Subtitle that can be Very Much Longer if Necessary}\\[0.5cm]
-Master's thesis in Master Programme Name \setlength{\parskip}{1cm}
+Bachelor's Thesis in Department of Electrical Engineering \setlength{\parskip}{1cm}
 
 \noindent
-{\Large MAGNUS GUSTAVER} \setlength{\parskip}{1.5cm}
+{\Large ELLIOT ANDERSSON, HANNES HULTERGÅRD} \setlength{\parskip}{1.5cm}
 
 \noindent
-\textcolor{thesisHeaderColor}{\small\textbf{DEPARTMENT OF SOME SUBJECT OR TECHNOLOGY}}
+\textcolor{thesisHeaderColor}{\small\textbf{DEPARTMENT OF ELECTRICAL ENGINEERING}}
 \setlength{\parskip}{1mm}
 
 \textsc{Chalmers University of Technology} \\
@@ -88,10 +88,11 @@ Master's thesis in Master Programme Name \setlength{\parskip}{1cm}
 \newpage
 \thispagestyle{empty}
 \begin{center}
-	\textsc{\large Master's thesis \the\year}\\[4cm]
+	\textsc{\large Bachelor's thesis \the\year}\\[4cm]
 	\textbf{\Large An Informative Headline describing\\ the Content of the Report} \\[1cm]
 	{\large A Subtitle that can be Very Much Longer if Necessary}\\[1cm]
-	{\large NAME FAMILYNAME}
+	{\large ELLIOT ANDERSSON}\\
+	{\large HANNES HULTERGÅRD}
 	
 	\vfill	
 	% Logotype on titlepage	
@@ -107,9 +108,7 @@ Master's thesis in Master Programme Name \setlength{\parskip}{1cm}
 	%\includegraphics[width=0.2\pdfpagewidth]{figure/auxiliary/AvancezChalmersU_black_centered.eps} \\
 	\end{figure}	\vspace{5mm}	
 	
-	Department of Some Subject or Technology \\
-	\emph{Division of Division name}\\
-	Name of research group (if applicable)\\
+    Department of Electrical Engineering \\
 	\textsc{Chalmers University of Technology} \\
 	Gothenburg, Sweden \the\year \\
 \end{center}
@@ -121,17 +120,15 @@ Master's thesis in Master Programme Name \setlength{\parskip}{1cm}
 \vspace*{4.5cm}
 An Informative Headline describing the Content of the Report\\
 A Subtitle that can be Very Much Longer if Necessary\\
-NAME FAMILYNAME \setlength{\parskip}{1cm}
+ELLIOT ANDERSSON, HANNES HULTERGÅRD \setlength{\parskip}{1cm}
 
-\copyright ~ NAME FAMILYNAME, \the\year. \setlength{\parskip}{1cm}
+\copyright ~ ELLIOT ANDERSSON, HANNES HULTERGÅRD, \the\year. \setlength{\parskip}{1cm}
 
-Supervisor: Name, Company or Department\\
-Examiner: Name, Department \setlength{\parskip}{1cm}
+Supervisor: Jonas Sjöberg, Professor, Electrical Engineering\\
+Examiner: Jonas Sjöberg, Professor, Electrical Engineering \setlength{\parskip}{1cm}
 
-Master's Thesis \the\year\\	
-Department of Some Subject or Technology\\
-Division of Division name\\
-Name of research group (if applicable)\\
+Bachelor's Thesis \the\year\\	
+Department of Electrical Engineering\\
 Chalmers University of Technology\\
 SE-412 96 Gothenburg\\
 Telephone +46 31 772 1000 \setlength{\parskip}{0.5cm}
@@ -141,5 +138,4 @@ Telephone +46 31 772 1000 \setlength{\parskip}{0.5cm}
 Cover: Wind visualization constructed in Matlab showing a surface of constant wind speed along with streamlines of the flow. \setlength{\parskip}{0.5cm}
 
 Typeset in \LaTeX \tagtemp\\
-Printed by Chalmers Reproservice\\
 Gothenburg, Sweden \the\year
