--- a/include/frontmatter/Abstract.tex
+++ b/include/frontmatter/Abstract.tex
@@ -1,8 +1,8 @@
 % CREATED BY MAGNUS GUSTAVER, 2020
 An Informative Headline describing the Content of the Report\\
 A Subtitle that can be Very Much Longer if Necessary\\
-NAME FAMILYNAME\\
-Department of Some Subject or Technology\\
+ELLIOT ANDERSSON, HANNES HULTERGÅRD\\
+Department of Electrical Engineering\\
 Chalmers University of Technology \setlength{\parskip}{0.5cm}
 
 \thispagestyle{plain}			% Supress header 
