--- a/include/settings/Settings.tex
+++ b/include/settings/Settings.tex
@@ -26,7 +26,8 @@
 	\centering
 	\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{#3}}}}
 \usepackage{float} 									% Enables object position enforcement using [H]
-\usepackage{parskip}								% Enables vertical spaces correctly 
+\usepackage{parskip}								% Enables vertical spaces correctly
+\usepackage[style=ieee]{biblatex}
 
 % DEFINE THESIS TYPE
 \def\ThesisType{B} % M - master, B - bachelor
@@ -43,8 +44,7 @@
 % OPTIONAL SETTINGS (DELETE OR COMMENT TO SUPRESS)
 
 % Disable automatic indentation (equal to using \noindent)
-\setlength{\parindent}{0cm}                         
-
+\setlength{\parindent}{0cm}
 
 % Caption settings (aligned left with bold name)
 \usepackage[labelfont=bf, textfont=normal,
@@ -109,6 +109,9 @@
 
 % Allow a table to split
 \usepackage{longtable}
+
+% Add references
+\addbibresource{references.bib}
 
 
 
