--- a/include/settings/Settings.tex
+++ b/include/settings/Settings.tex
@@ -28,6 +28,7 @@
 \usepackage{float} 									% Enables object position enforcement using [H]
 \usepackage{parskip}								% Enables vertical spaces correctly
 \usepackage[style=ieee]{biblatex}
+\usepackage{csquotes}
 
 % DEFINE THESIS TYPE
 \def\ThesisType{B} % M - master, B - bachelor
