--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,57 @@
+@misc{Vedder2014AESC,
+    title = {{A custom BLDC motor controller (a custom ESC)}},
+    year = {2014},
+    author = {Vedder, Benjamin},
+    url = {http://vedder.se/2014/01/a-custom-bldc-motor-controller/}
+}
+
+@misc{NationalInstruments2022BenefitsLabVIEW,
+    title = {{Benefits of Programming Graphically in LabVIEW}},
+    year = {2022},
+    author = {{National Instruments}},
+    url = {https://www.ni.com/sv-se/innovations/white-papers/13/benefits-of-programming-graphically-in-ni-labview.html}
+}
+
+@misc{Nationalinstruments2018CallNode,
+    title = {{Call Library Function Node}},
+    year = {2018},
+    author = {{National instruments}},
+    month = {3},
+    url = {https://zone.ni.com/reference/en-XX/help/371361R-01/glang/call_library_function/}
+}
+
+@misc{Vedder2015CommunicatingUART,
+    title = {{Communicating with the VESC using UART}},
+    year = {2015},
+    author = {Vedder, Benjamin},
+    month = {10},
+    url = {http://vedder.se/2015/10/communicating-with-the-vesc-using-uart/}
+}
+
+@misc{NationalInstruments2021CreatingTarget,
+    title = {{Creating Shared Library For LabVIEW Real-Time or VeriStand on NI Linux RT Target}},
+    year = {2021},
+    author = {{National Instruments}},
+    month = {10},
+    url = {https://knowledge.ni.com/KnowledgeArticleDetails?id=kA03q000000YGNdCAO&l=sv-SE}
+}
+
+@misc{Maxon2021ESCONReference,
+    title = {{ESCON 50/5 Hardware Reference}},
+    year = {2021},
+    author = {{Maxon}},
+    month = {8},
+    url = {https://www.maxongroup.com/medias/sys_master/root/8930313371678/409510-ESCON-50-5-Hardware-Reference-En.pdf}
+}
+
+@misc{Trochimiuk2021FPGAUsed,
+    title = {{FPGA programming—how it works and where it can be used}},
+    year = {2021},
+    author = {Trochimiuk, Maciej},
+    month = {4},
+    url = {https://codilime.com/blog/fpga-programming-how-it-works-and-where-it-can-be-used/}
+}
+
 @misc{NationalInstruments2022FromNI,
     title = {{From Student to Engineer: Preparing Future Innovators With the NI LabVIEW RIO Architecture - NI}},
     year = {2022},
@@ -6,12 +60,98 @@
     url = {https://www.ni.com/sv-se/innovations/white-papers/14/from-student-to-engineer--preparing-future-innovators-with-the-n.html}
 }
 
+@misc{AvagoTechnologies2014HEDM-55xx/560xHEDS-55xx/56xx,
+    title = {{HEDM-55xx/560x {\&} HEDS-55xx/56xx}},
+    year = {2014},
+    author = {{Avago Technologies}},
+    month = {11}
+}
+
+@misc{STMicroelectronics2015INEMOMagnetometer,
+    title = {{iNEMO inertial module: 3D accelerometer, 3D gyroscope, 3D magnetometer}},
+    year = {2015},
+    author = {{STMicroelectronics}},
+    month = {3},
+    url = {https://www.st.com/resource/en/datasheet/lsm9ds1.pdf}
+}
+
+@misc{NationalInstruments2021IntegratingTargets,
+    title = {{Integrating C Code with LabVIEW on NI Linux Real-Time Targets}},
+    year = {2021},
+    author = {{National Instruments}},
+    month = {10},
+    url = {https://knowledge.ni.com/KnowledgeArticleDetails?id=kA03q000000YGvGCAW&l=sv-SE}
+}
+
 @misc{NationalInstruments2022MyRIO-1900,
     title = {{myRIO-1900}},
     year = {2022},
     author = {{National Instruments}},
     month = {4},
     url = {https://www.ni.com/sv-se/support/model.myrio-1900.html}
+}
+
+@article{Digilent2017PmodManual,
+    title = {{Pmod NAV Reference Manual}},
+    year = {2017},
+    author = {{Digilent}},
+    month = {1},
+    url = {https://digilent.com/reference/_media/reference/pmod/pmodnav/pmod_nav_rm.pdf}
+}
+
+@phdthesis{AronssonKarlsson2022PROJECTAUTOBIKE,
+    title = {{PROJECT AUTOBIKE}},
+    year = {2022},
+    author = {Aronsson Karlsson, Viktor and Brid{\'{e}}n, Love and Zawari, Maya and Sherif, Gabriel},
+    month = {8},
+    school = {M{\"{a}}lardalen University},
+    address = {V{\"{a}}ster{\aa}s}
+}
+
+@inproceedings{Andrade1998SoftwareTM,
+    title = {{Software synthesis from dataflow models for G and LabVIEW TM}},
+    year = {1998},
+    booktitle = {Conference Record of the Asilomar Conference on Signals, Systems and Computers},
+    author = {Andrade, Hugo A. and Kovner, Scott},
+    pages = {1705--1709},
+    volume = {2},
+    url = {https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=751616},
+    doi = {10.1109/acssc.1998.751616},
+    issn = {10586393}
+}
+
+@misc{NationalInstruments2020TheInnovation,
+    title = {{The LabVIEW RIO Architecture: A Foundation for Innovation}},
+    year = {2020},
+    author = {{National Instruments}},
+    month = {10},
+    url = {https://www.ni.com/sv-se/innovations/white-papers/13/the-labview-rio-architecture--a-foundation-for-innovation.html}
+}
+
+@article{GraceLegaspi2020UART:Receiver/Transmitter,
+    title = {{UART: A Hardware Communication Protocol Understanding Universal Asynchronous Receiver/Transmitter}},
+    year = {2020},
+    journal = {Analog Dialogue},
+    author = {Grace Legaspi, Mary and Peňa, Eric},
+    number = {4},
+    volume = {54},
+    url = {https://www.analog.com/en/analog-dialogue/articles/uart-a-hardware-communication-protocol.html}
+}
+
+@misc{Vedder2016VESCESC,
+    title = {{VESC – Open Source ESC}},
+    year = {2016},
+    author = {Vedder, Benjamin},
+    month = {1},
+    url = {http://vedder.se/2015/01/vesc-open-source-esc/}
+}
+
+@misc{Technopedia2020WhatCRC,
+    title = {{What is Cyclic Redundancy Check (CRC)?}},
+    year = {2020},
+    author = {{Technopedia}},
+    month = {9},
+    url = {https://www.techopedia.com/definition/1793/cyclic-redundancy-check-crc}
 }
 
 @misc{NationalInstruments2022WhatLabVIEW,
